@@ -174,7 +174,7 @@ along with this software (see the LICENSE.md file). If not, see
                     for-update="true"/>
             <set field="currencyUomId" from="financialAccount.currencyUomId"/>
 
-            <!-- View queries won't work with transaction cache, so if active use different approach -->
+            <!-- View queries won't work with transaction cache (for data updated within the tx), so if active use different approach -->
             <if condition="ec.transaction.isTransactionCacheActive()"><then>
                 <set field="actualBalance" from="0"/>
                 <entity-find entity-name="mantle.account.financial.FinancialAccountTrans" list="fatList">
