@@ -29,6 +29,8 @@ New Features
 - OrderDisplayInfo now gets quantity not shipped, billed by item and part
 - On Pack Shipment when invoice is created it is no longer put in
   Finalized status so it may be modified before Finalize and GL posting
+- When Asset.quantityOnHandTotal goes below zero now does an automatic
+  physical inventory found to get it back to zero
 
 Bug Fixes
 
